--- a/src/assets/css/livres.css
+++ b/src/assets/css/livres.css
@@ -63,7 +63,7 @@
     display: flex;
     width: 300px;
     height: 30px;
-    margin-top: 1.8vh;
+    margin: 1.8vh auto;
     border: 1px solid #919191;
     border-radius: 8px;
     text-align: center;
@@ -73,7 +73,7 @@
     display: flex;
     width: 300px;
     height: 30px;
-    margin-top: 1.8vh;
+    margin: 1.8vh auto;
     border: 1px solid #919191;
     border-radius: 8px;
     text-align: center;
