--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -13,13 +13,35 @@ body {
   margin-top: 20px;
 }
 
-.search-container input {
+.search-container input[type="text"] {
   display: flex;
   width: 300px;
   height: 40px;
   border: 1px solid #919191;
   border-radius: 8px;
   text-align: center;
+}
+
+.search-container input[type="checkbox"] {
+  margin-right: 10px;
+}
+
+.search-container label {
+  margin: 0;
+}
+
+.search-container form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1vw;
+}
+
+.search-container select {
+  padding: 0.5rem;
+  border: 1px solid #b4b4b4;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .search-container a {
@@ -42,7 +64,30 @@ body {
   background-color: #e5e5e5;
 }
 
+.search-container button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  margin: 0 auto;
+  padding: 0 10px;
+  border: 1px solid #919191;
+  border-radius: 8px;
+  background-color: #f5f5f5;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.search-container button:hover {
+  background-color: #e5e5e5;
+}
+
 /*Labels*/
+h1 {
+  margin-top: 3vh;
+  text-align: center;
+  font-size: 1.9em;
+}
 .error {
   margin: 5vh;
   text-align: center;;
