--- a/src/assets/css/auteurs.css
+++ b/src/assets/css/auteurs.css
@@ -1,4 +1,4 @@
-/* Auteurs */
+/*Page Auteurs*/
 .auteurs-container {
     display: flex;
     justify-content: center;
@@ -13,10 +13,10 @@
 }
 
 .auteurs-item {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
     width: 300px;
     margin: 10px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
     border: 1px solid #919191;
     border-radius: 8px;
 }
@@ -36,10 +36,10 @@
 }
 
 .auteurs-item-actions a {
+    padding: 5px 10px;
     background-color: #f5f5f5;
     border: 1px solid #919191;
     border-radius: 8px;
-    padding: 5px 10px;
     text-decoration: none;
     color: black;
     cursor: pointer;
@@ -47,44 +47,5 @@
 }
 
 .auteurs-item-actions a:hover {
-    background-color: #e5e5e5;
-}
-
-/*Auteurs Add*/
-.auteurs-add-container {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-}
-
-.auteurs-add-container .form-group {
-    margin: 3vh 0;
-}
-
-.auteurs-add-container input {
-    display: flex;
-    width: 300px;
-    height: 30px;
-    margin-top: 1.8vh;
-    border: 1px solid #919191;
-    border-radius: 8px;
-    text-align: center;
-}
-
-.auteurs-add-container button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 40px;
-    margin: 0 auto;
-    padding: 0 10px;
-    border: 1px solid #919191;
-    border-radius: 8px;
-    background-color: #f5f5f5;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.auteurs-add-container button:hover {
     background-color: #e5e5e5;
 }
