--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,94 +1,120 @@
 body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /*Barre de recherche*/
 .search-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.search-container input[type="text"] {
-  display: flex;
-  width: 300px;
-  height: 40px;
-  border: 1px solid #919191;
-  border-radius: 8px;
-  text-align: center;
-}
-
-.search-container input[type="checkbox"] {
-  margin-right: 10px;
-}
-
-.search-container label {
-  margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
 }
 
 .search-container form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  column-gap: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1vw;
+}
+
+.search-container input[type="text"] {
+    width: 300px;
+    height: 40px;
+    display: flex;
+    border: 1px solid #919191;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.search-container input[type="checkbox"] {
+    margin-right: 10px;
 }
 
 .search-container select {
-  padding: 0.5rem;
-  border: 1px solid #b4b4b4;
-  border-radius: 5px;
-  cursor: pointer;
+    padding: 0.5rem;
+    border: 1px solid #b4b4b4;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
-.search-container a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 40px;
-  margin-left: 10px;
-  padding: 0 10px;
-  border: 1px solid #919191;
-  border-radius: 8px;
-  background-color: #f5f5f5;
-  text-decoration: none;
-  color: black;
-  cursor: pointer;
-  transition: 0.3s;
+.search-container a, .search-container button {
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+    padding: 0 10px;
+    border: 1px solid #919191;
+    border-radius: 8px;
+    background-color: #f5f5f5;
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
-.search-container a:hover {
-  background-color: #e5e5e5;
+.search-container a:hover, .search-container button:hover {
+    background-color: #e5e5e5;
 }
 
-.search-container button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 40px;
-  margin: 0 auto;
-  padding: 0 10px;
-  border: 1px solid #919191;
-  border-radius: 8px;
-  background-color: #f5f5f5;
-  cursor: pointer;
-  transition: 0.3s;
+/*Formulaire Ajouter*/
+.form-add-container {
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
-.search-container button:hover {
-  background-color: #e5e5e5;
+.form-add-container .form-group {
+    margin: 3vh 0;
 }
 
-/*Labels*/
+.form-add-container input {
+    width: 300px;
+    height: 30px;
+    display: flex;
+    margin: 1.8vh auto;
+    border: 1px solid #919191;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.form-add-container select {
+    width: 300px;
+    height: 30px;
+    display: flex;
+    margin: 1.8vh auto;
+    border: 1px solid #919191;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.form-add-container button {
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 0 10px;
+    border: 1px solid #919191;
+    border-radius: 8px;
+    background-color: #f5f5f5;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.form-add-container button:hover {
+    background-color: #e5e5e5;
+}
+
+/*Titres*/
 h1 {
-  margin-top: 3vh;
-  text-align: center;
-  font-size: 1.9em;
+    margin-top: 3vh;
+    text-align: center;
+    font-size: 1.9em;
 }
+
 .error {
-  margin: 5vh;
-  text-align: center;;
+    margin: 5vh;
+    text-align: center;
 }
