--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -1,45 +1,46 @@
+/*Login Page*/
 .login-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #f5f5f5;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f5f5;
 }
 
 .login-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 2rem;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
 }
 
 .login-form label {
     display: block;
-  margin-bottom: 1rem;
-  text-align: center;
+    margin-bottom: 1rem;
+    text-align: center;
 }
 
 .login-form input {
-  padding: 0.5rem;
-  border: 1px solid #b4b4b4;
-  border-radius: 5px;
-  text-align: center;
+    padding: 0.5rem;
+    border: 1px solid #b4b4b4;
+    border-radius: 5px;
+    text-align: center;
 }
 
 .login-form button {
-  padding: 0.5rem;
-  border: none;
-  border-radius: 5px;
-  background-color: #000000;
-  color: #ffffff;
-  font-weight: bold;
-  cursor: pointer;
-  transition: 0.3s;
+    padding: 0.5rem;
+    border: none;
+    border-radius: 5px;
+    background-color: #000000;
+    color: #ffffff;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
 .login-form button:hover {
-  background-color: #363636;
+    background-color: #363636;
 }
